# swatch-secrets

./: README.md  pyproject.toml
swatchsecrets/: code.py  encode.py
