[tool.poetry]
name = "swatchsecrets"
version = "0.1.0"
description = "Python scripts and utils for generating knitting swatch patterns where you encode the swatch information (cast on stitches, needle size, etc.) from the right side in knits and purls"
authors = ["Audrey Seo <audreyleeseo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
